--- a/package.json
+++ b/package.json
@@ -23,9 +23,15 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
     "@babel/preset-env": "^7.0.0-beta.46",
     "@babel/preset-react": "^7.0.0-beta.46",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.0-beta.0",
     "concurrently": "^4.0.1",
     "css-loader": "^1.0.0",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.3",
     "html-webpack-plugin": "^3.2.0",
     "react": "^16.7",
     "react-dom": "^16.7",
