--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wafo-forms",
-  "version": "0.2.5",
+  "version": "0.3.0",
   "description": "No quiero volver a configurar states para inputs, ni hacer validaciones. Esta en React.",
   "main": "lib/index.js",
   "scripts": {
@@ -45,5 +45,8 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:elWafo/wafo-forms.git"
+  },
+  "dependencies": {
+    "prop-types": "^15.7.2"
   }
 }
