--- a/package.json
+++ b/package.json
@@ -13,32 +13,32 @@
   "keywords": [],
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.7",
-    "react-dom": "^16.7"
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0-beta.46",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.0-beta.0",
-    "concurrently": "^4.0.1",
-    "css-loader": "^1.0.0",
-    "eslint": "^5.12.0",
+    "babel-loader": "^8.0.5",
+    "concurrently": "^4.1.0",
+    "css-loader": "^1.0.1",
+    "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.3",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.7",
-    "react-dom": "^16.7",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "style-loader": "^0.23.1",
-    "webpack": "^4.6.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.2.1"
   },
   "author": "Jose Luis Vega <joseluisvb@outlook.com>",
   "homepage": "https://github.com/elWafo/wafo-forms",
