--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wafo-forms",
-  "version": "0.5.4",
-  "description": "No quiero volver a configurar states para inputs, ni hacer validaciones. Esta en React.",
+  "version": "0.5.5",
+  "description": "I don't want to configure an input ever.",
   "main": "lib/index.js",
   "scripts": {
     "dev": "concurrently \"npm run lib:watch\" \"npm run docs\"",
@@ -14,31 +14,32 @@
   "license": "MIT",
   "peerDependencies": {
     "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react-dom": "^16.8.4",
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/plugin-proposal-class-properties": "^7.3.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0-beta.46",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
     "concurrently": "^4.1.0",
     "css-loader": "^1.0.1",
-    "eslint": "^5.15.3",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
   },
   "author": "Jose Luis Vega <joseluisvb@outlook.com>",
   "homepage": "https://github.com/elWafo/wafo-forms",
@@ -46,7 +47,5 @@
     "type": "git",
     "url": "git@github.com:elWafo/wafo-forms.git"
   },
-  "dependencies": {
-    "prop-types": "^15.7.2"
-  }
+  "dependencies": {}
 }
