--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wafo/forms",
-  "version": "0.5.11",
+  "version": "0.5.12",
   "description": "I don't want to configure an input ever.",
   "main": "lib/index.js",
   "scripts": {
@@ -13,33 +13,31 @@
   "keywords": [],
   "license": "MIT",
   "peerDependencies": {
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0-beta.46",
-    "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
-    "concurrently": "^4.1.0",
+    "babel-eslint": "^10.0.2",
+    "babel-loader": "^8.0.6",
+    "concurrently": "^4.1.2",
     "css-loader": "^1.0.1",
     "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1",
-    "webpack-dev-server": "^3.3.1"
+    "webpack": "^4.39.2",
+    "webpack-cli": "^3.3.7",
+    "webpack-dev-server": "^3.8.0"
   },
   "author": "Jose Luis Vega <joseluisvb@outlook.com>",
   "homepage": "https://github.com/elWafo/wafo-forms",
