--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "forms",
-  "version": "1.0.0",
+  "name": "@wafo/forms",
+  "version": "0.6.16",
   "description": "I don&#x27;t want to configure state for inputs.",
-  "author": "wafo",
+  "author": "Jose Luis Vega <joseluisvb@outlook.com>",
+  "homepage": "https://github.com/wafo/forms",
   "license": "MIT",
-  "repository": "wafo/forms",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:wafo/forms.git"
+  },
   "main": "dist/index.js",
   "module": "dist/index.modern.js",
   "source": "src/index.js",
@@ -39,6 +43,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^3.0.0",
     "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
     "npm-run-all": "^4.1.5",
