--- a/example/package.json
+++ b/example/package.json
@@ -7,6 +7,7 @@
     "react": "file:../node_modules/react",
     "react-dom": "file:../node_modules/react-dom",
     "react-scripts": "file:../node_modules/react-scripts",
+    "prop-types": "file:../node_modules/prop-types",
     "forms": "file:.."
   },
   "scripts": {
