--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wafo/forms",
-  "version": "0.6.16",
-  "description": "I don&#x27;t want to configure state for inputs.",
+  "version": "0.6.17",
+  "description": "I don't want to configure state for inputs.",
   "author": "Jose Luis Vega <joseluisvb@outlook.com>",
   "homepage": "https://github.com/wafo/forms",
   "license": "MIT",
@@ -36,16 +36,9 @@
     "babel-eslint": "^10.0.3",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-config-standard-react": "^9.2.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-node": "^11.0.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^3.0.0",
-    "eslint-plugin-standard": "^4.0.1",
     "gh-pages": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
